--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "API for handling finances",
   "main": "app.js",
   "scripts": {
+    "start": "node src/app.js",
     "dev": "nodemon src/app.js",
     "test": "jest"
   },
@@ -22,9 +23,12 @@
   },
   "homepage": "https://github.com/Angelo-Bruno/finance#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
     "jest": "^28.0.3",
-    "nodemon": "^2.0.15"
+    "jsonwebtoken": "^8.5.1",
+    "nodemon": "^2.0.15",
+    "pg": "^8.7.3"
   },
   "devDependencies": {
     "sequelize": "^6.19.0",
